apps/traefik/overlays/backup-server/traefik-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-network-policy
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.1.2.6/24
            # except:
              # - 10.1.2.12/32
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8443
